Dashboard: Coaching Guide split into strings.

--- a/app/views/dashboard/effective-teacher-guide.html.haml
+++ b/app/views/dashboard/effective-teacher-guide.html.haml
@@ -3,20 +3,20 @@
   .row
     .large-12.columns
       %ul.square
-        %li You don't need a laptop for our workshops. You are there to watch and guide the students. If you don't feel comfortable with the tutorial you should spend time on it before coming if you want to help out.
-        %li Do not take over the keyboard! This can be off-putting and scary.
-        %li Encourage the students to type and not copy paste.
-        %li Explain that there are no dumb questions.
-        %li Explain to students that it's ok to make mistakes.
-        %li Always introduce yourself. Say why you want to help out and are spending your own time on this, why you like programming.
-        %li Give your students the opportunity to get to know each other. Ask their names, why they are here, what they do in their day jobs. Encourage a brief discussion before starting.
-        %li Assume that anyone you're teaching has no knowledge but infinite intelligence.
-        %li Work collaboratively with your student. If you have two students, you should work with both. Don't focus all your attention on one of them.
-        %li Let students have a go at answering the questions first. Help with open and leading questions. Encourage a discussion.
-        %li Take it slow, you are the teacher, they are the student. Allow for time between questions.
-        %li Don't say no when the students are not doing something right. Be gentle, approach it in a mild way.
-        %li Use pen and paper or go to a whiteboard! Often students are coming from a non-technical background. Drawing and explaining with visual material is really helpful.
-        %li Let them stumble. We learn by making mistakes, getting frustrated, and working through problem in our own way. Be supportive, but let them explore.
+        %li= t('dashboard.teacher_guide.laptop')
+        %li= t('dashboard.teacher_guide.keyboard')
+        %li= t('dashboard.teacher_guide.typing')
+        %li= t('dashboard.teacher_guide.questions')
+        %li= t('dashboard.teacher_guide.mistakes')
+        %li= t('dashboard.teacher_guide.introduction')
+        %li= t('dashboard.teacher_guide.backgrounds')
+        %li= t('dashboard.teacher_guide.limits')
+        %li= t('dashboard.teacher_guide.colaboration')
+        %li= t('dashboard.teacher_guide.discussion')
+        %li= t('dashboard.teacher_guide.talk_slow')
+        %li= t('dashboard.teacher_guide.mild_approach')
+        %li= t('dashboard.teacher_guide.paper')
+        %li= t('dashboard.teacher_guide.stubling')
 
   .row
     .large-12.columns
