--- a/app/views/events/_faq.html.haml
+++ b/app/views/events/_faq.html.haml
@@ -1,33 +1,33 @@
 %ul.small-block-grid-1.medium-block-grid-3
   %li
     %small
-      %b How experienced should I be to join the workshop?
+      %b= t('events.faq.experience.q')
     %p
       %small
         You must have a general idea about programming and preferably to have already finished the #{link_to("HTML tutorials", "http://tutorials.codebar.io")} or have a similar level of understanding, and basic git knowledge.
   %li
     %small
-      %b What kind of contributions can I make?
+      %b= t('events.faq.contribution.q')
     %p
       %small
         Your contributions can be tiny, as simple as fixing a typo, to something incredible. You can help with documentation, fix a bug that you found, improve the copy, help with design or even tackle bigger tasks and help introduce new features. Every little helps!
   %li
     %small
-      %b Do I need to bring a laptop?
+      %b= t('events.faq.laptop.q')
     %p
       %small
-        Yes, you should bring a laptop. If you don't have one #{mail_to("24pullrequests@codebar.io", "send us an email" )} as we may be able to help.
+        = t('events.faq.laptop.a_html', link: mail_to("24pullrequests@codebar.io", t("events.send_us_an_email") ))
   %li
     %small
-      %b Do I need to bring a keyboard?
+      %b= t('events.faq.keyboard.q')
     %p
       %small
-        A keyboard would help as you will spend the entire day pairing with someone on your latop. If you don't have a keyboard, #{mail_to("24pullrequests@codebar.io", "send us an email" )} and we'll try to organise something for you.
+        = t('events.faq.keyboard.a_html', link: mail_to("24pullrequests@codebar.io", t("events.send_us_an_email") ))
   %li
     %small
-      %b I will be commuting from Brighton/Cambridge. Can you help with my travel expenses?
+      %b= t('events.faq.travel_costs.q')
     %p
       %small
-        Yes, we can help by covering your travel costs. Make sure you fill in the questionnaire and we'll get in touch.
+        = t('events.faq.travel_costs.a')
 
 
