--- a/app/views/workshops/_workshop_actions.html.haml
+++ b/app/views/workshops/_workshop_actions.html.haml
@@ -1,16 +1,16 @@
 %p
   - if @workshop.past?
     - if logged_in?
-      This workshop's already happened.
+      This workshop has already taken place.
     - else
-      This workshop's already happened, but you can sign up to receive invites to our future events.
+      This workshop has already taken place, but you can sign up to receive invitations to our future events.
   - elsif @workshop.attendee? current_user
     You're attending this event.
   - elsif @workshop.waitlisted? current_user
     You're on the waiting list for this event.
   - else
-    - if not @workshop.invitable
-      This workshop isn't open for registrations yet.
+    - if !@workshop.invitable
+      Registrations are not yet available.
     - elsif @workshop.spaces?
       Come along and join us!
     - else
@@ -18,20 +18,19 @@
 
 - if logged_in? && @workshop.future? && @workshop.invitable
   - if @workshop.attendee?(current_user)
-    - if @workshop.imminent?
-      You can't change your RSVP this close to the event. If you can no longer make it,
-      = link_to "email us and let us know", "mailto:#{@workshop.chapter.email}"
-    - else
+    - if @workshop.rsvp_available?
       = form_tag remove_workshop_path, method: :post do
         = submit_tag "Cancel your attendance", class: 'button round expand'
+    - else
+      You can't change your RSVP this close to the event. If you can no longer make it, please
+      = link_to "send us an email", "mailto:#{@workshop.chapter.email}"
 
 
   - elsif @workshop.waitlisted?(current_user)
     = form_tag remove_workshop_path, method: :post do
-      = submit_tag "Leave the waiting list", class: 'button round expand'
+      = submit_tag "Remove from Waiting list", class: 'button round expand'
       - if @workshop.attendee?(current_user)
         = submit_tag "Cancel your attendance", class: 'button round expand'
-      - else
 
   - else
     = form_tag add_workshop_path, method: :post do
@@ -48,6 +47,6 @@
       - else
         = submit_tag "Join the coach waiting list", class: 'button round expand'
 - elsif not logged_in?
-  = link_to "Sign up as a student", new_member_path(role: "student"), class: 'button round expand'
-  = link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
-  = link_to "Log in with existing account", redirect_path, class: 'button round expand'
+  = link_to "Sign up as a student", new_member_path, class: 'button round expand'
+  = link_to "Sign up as a coach", new_member_path, class: 'button round expand'
+  = link_to "Log in", redirect_path, class: 'button round expand'
