reword to keep consistent with the invitation page

--- a/app/views/workshops/_workshop_actions.html.haml
+++ b/app/views/workshops/_workshop_actions.html.haml
@@ -7,7 +7,7 @@
   - elsif @workshop.attendee? current_user
     You're attending this event.
   - elsif @workshop.waitlisted? current_user
-    You're on the waiting list for this event.
+    You are on the Waiting List.
   - else
     - if !@workshop.invitable
       Registrations are not yet available.
