--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -39,7 +39,7 @@
                 We're not sure where this workshop will be hosted yet.
                 = link_to "Can you help?", sponsoring_path
 
-            %p Workshop co-ordinators
+            %p Workshop Organisers
             = @workshop.organisers_as_list(logged_in?)
 
         - if @workshop.sponsors.any?
