--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -16,8 +16,8 @@
 
     .large-4.columns
       .panel
-        - if @invitation.sessions.date_and_time < DateTime.now
-          %em This session has already taken place!
+        - if @invitation.sessions.past?
+          %em This workshop has already taken place.
         - else
 
           - if @invitation.attending.eql?(true)
@@ -65,7 +65,7 @@
       = image_tag @workshop.venue.avatar, class: 'sponsor-logo'
       %p
         = @host_address.to_html
-      %strong Organisers
+      %strong Workshop Organisers
       - @workshop.organisers.each do |organiser|
         %p
           = organiser.full_name
