fix typos - remove weekly, not applicable to all chapters

--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -21,7 +21,7 @@
               (in #{distance_of_time_in_words_to_now(@workshop.date_and_time)})
 
         %p
-          Attend our weekly workshops to learn programming in a safe and supportive environent at your own pace, or to share you knowledge and mentor our students.
+          Attend our workshops to learn programming in a safe and supportive environment at your own pace, or to share your knowledge and mentor our students.
 
       .medium-4.columns
         .panel
