--- a/app/views/invitation/_waiting_list.html.haml
+++ b/app/views/invitation/_waiting_list.html.haml
@@ -1,11 +1,11 @@
 - if invitation.waiting_list.blank?
   %p The workshop is full.
-  = link_to "Join the Waiting List", invitation_waiting_list_path(invitation), method: :post, class: 'button round expand', "data-confirm" => "You will automatically be RSVPed until #{l(invitation.sessions.date_and_time-3.5.hours, format: :time)} on the day of the event, so make sure you keep an eye on your email."
+  = link_to "Join the Waiting List", invitation_waiting_list_path(invitation), method: :post, class: 'button round expand', "data-confirm" => "Are you sure you want to join the waiting list? If any spots become available, even last minute, you will get a spot for the workshop."
 
   = link_to "Not sure, just remind me", invitation_waiting_list_path(invitation, auto_rsvp: false), method: :post, class: "button round expand"
 - else
   - if invitation.waiting_list.auto_rsvp?
-    %p We will RSVP you if any spots become available
-    = link_to "Remove from Waiting list", invitation_waiting_list_path(invitation), method: :delete, class: 'button expand round alert', "data-confirm" => "Are you sure you want to let go of your spot?"
+    %p If any spots become available, we will RSVP your and let you know by email!
+    = link_to "Remove from Waiting list", invitation_waiting_list_path(invitation), method: :delete, class: 'button expand round alert', "data-confirm" => "Are you sure you want to let go of your spot? You cannot undo this."
   - else
     = link_to "Don't send me a reminder", invitation_waiting_list_path(invitation), method: :delete, class: 'button expand round alert'
