--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -1,4 +1,9 @@
 = render partial: 'shared/title', locals: { title: "Workshop", date: humanize_date_with_time(@invitation.sessions.date_and_time, @invitation.sessions.time) }
+.row
+  .large-12.columns
+    .alert-box.secondary
+      This is a private link, do not share it with others! You can access the public view of the workshop <strong> #{link_to("here", workshop_url(@workshop))}</strong>.
+
 %section
   .inner-nav{ "data-magellan-expedition" => "fixed" }
     .row
@@ -65,7 +70,7 @@
       = image_tag @workshop.venue.avatar, class: 'sponsor-logo'
       %p
         = @host_address.to_html
-      %strong Workshop Organisers
+      %strong Organisers
       - @workshop.organisers.each do |organiser|
         %p
           = organiser.full_name
