--- a/app/views/invitation/_waiting_list.html.haml
+++ b/app/views/invitation/_waiting_list.html.haml
@@ -5,7 +5,9 @@
   = link_to "Not sure, just remind me", invitation_waiting_list_path(invitation, auto_rsvp: false), method: :post, class: "button round expand"
 - else
   - if invitation.waiting_list.auto_rsvp?
-    %p If any spots become available, we will RSVP your and let you know by email!
+
+    .text-center Waiting List position: <strong>#{invitation.waiting_list_position}</strong>/#{@workshop.waiting_list_count_for(invitation.role)}
+    %br
     = link_to "Remove from Waiting list", invitation_waiting_list_path(invitation), method: :delete, class: 'button expand round alert', "data-confirm" => "Are you sure you want to let go of your spot? You cannot undo this."
   - else
     = link_to "Don't send me a reminder", invitation_waiting_list_path(invitation), method: :delete, class: 'button expand round alert'
