--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -101,7 +101,7 @@
             %br
             %br
             = organiser.full_name
-            = organiser.mobile
+            %br= organiser.mobile
             %br
 
   .row
