--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -6,21 +6,29 @@
         %small #{l(@event.date_and_time)} to #{l(@event.ends_at, format: :time) }
       %p.lead= @event.description
 
-  .row
-    .large-10.columns
-      =link_to event_student_rsvp_path(@event), class: 'button round' do
-        Get started with Open Source!
-      =link_to event_coach_rsvp_path(@event), class: 'button round' do
-        Attend as a coach
-      %br
-      %br
+    .row
+      .large-10.columns
+        - if @event.announce_only
+          =link_to @event.url, class: 'button round' do
+            Sign up
+        - else
+          =link_to event_student_rsvp_path(@event), class: 'button round' do
+            Get started with Open Source!
+          =link_to event_coach_rsvp_path(@event), class: 'button round' do
+            Attend as a coach
+          %br
+          %br
 
 %br
 %br
 .row
   .large-7.columns
-    %a{ name: "schedule" }
-    %h4{ "data-magellan-destination" => "schedule"} Schedule
+    - if @event.announce_only
+      %a{ name: "information" }
+      %h4{ "data-magellan-destination" => "information"} Information
+    - else
+      %a{ name: "schedule" }
+      %h4{ "data-magellan-destination" => "schedule"} Schedule
     = @event.schedule.html_safe
   .large-5.columns
     %h4 Location
@@ -41,49 +49,54 @@
       %a{ name: "faq" }
         %h2{ "data-magellan-destination" => "faq"}
           .text-center FAQ
-      = render partial: 'events/faq'
+      - if @event.announce_only
+        %p.text-center If you have any questions, #{link_to("get in contact", @event.email)}
+
+      - else
+        = render partial: 'events/faq'
 
 %br
 %br
-.row
-  .large-12.columns
-    %a{ name: "sponsors" }
-    %h2{ "data-magellan-destination" => "sponsors"}
-      .text-center Sponsors
-    %p.text-center
-      %i A big thanks to all of our sponsors for making the event possible!
-    %br
-    - if @event.sponsors.any?
-      %ul.no-bullet
-        - @event.sponsors.each do |sponsor|
-          %li
-            .row
-              .large-2.columns
-                = image_tag sponsor.avatar, class: 'sponsor'
-              .large-10.columns
-                =link_to sponsor.name, sponsor.website
-                %p
-                  = sponsor.description
-            %br
-%br
-.past__container
+- unless @event.announce_only
   .row
     .large-12.columns
-      %a{ name: "coaches" }
-        %h2{ "data-magellan-destination" => "coaches"}
-          .text-center Coaches
+      %a{ name: "sponsors" }
+      %h2{ "data-magellan-destination" => "sponsors"}
+        .text-center Sponsors
+      %p.text-center
+        %i A big thanks to all of our sponsors for making the event possible!
       %br
-      - if @event.verified_coaches.any?
-        %ul.small-block-grid-2.medium-block-grid-5
-          - @event.verified_coaches.each do |coach|
-            %li.text-center
-              =link_to twitter_url_for(coach.twitter) do
-                =image_tag coach.avatar(56), class: 'th radius', title: coach.full_name
-                %br
-                %br
-                = coach.full_name
+      - if @event.sponsors.any?
+        %ul.no-bullet
+          - @event.sponsors.each do |sponsor|
+            %li
+              .row
+                .large-2.columns
+                  = image_tag sponsor.avatar, class: 'sponsor'
+                .large-10.columns
+                  =link_to sponsor.name, sponsor.website
+                  %p
+                    = sponsor.description
+              %br
   %br
-%br
+  .past__container
+    .row
+      .large-12.columns
+        %a{ name: "coaches" }
+          %h2{ "data-magellan-destination" => "coaches"}
+            .text-center Coaches
+        %br
+        - if @event.verified_coaches.any?
+          %ul.small-block-grid-2.medium-block-grid-5
+            - @event.verified_coaches.each do |coach|
+              %li.text-center
+                =link_to twitter_url_for(coach.twitter) do
+                  =image_tag coach.avatar(56), class: 'th radius', title: coach.full_name
+                  %br
+                  %br
+                  = coach.full_name
+    %br
+  %br
 .row
   .large-12.columns
     %a{ name: "organisers" }
