Allow editing & creation of notes in the admin interface; display note on the workshop page.

--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -5,6 +5,7 @@
 
       = f.input :date_and_time, as: :string, placeholder: Date.tomorrow.strftime('%d %b, %Y'), required: true
       = f.input :time, as: :string, placeholder: DateTime.new(2014,6,1,12,30).strftime("%H:%M %P"), required: true, input_html: { id: "sessions_time" }
+      = f.input :invite_note, as: :text, placeholder: "Text you include here will be visible on the workshop page and in the email invitations. HTML formatting is OK."
       = f.input :invitable
   .row
     .large-12.columns.text-right
