Display the invitation note on the main website (on workshop pages and on the website invite).

--- a/app/views/invitation/_coach.html.haml
+++ b/app/views/invitation/_coach.html.haml
@@ -8,6 +8,10 @@
 %p
   = t('coaches.unable_attend')
 
+- unless @invitation.sessions.invite_note.blank?
+  %p
+    = @invitation.sessions.invite_note.html_safe
+
 %p
   = t('coaches.food')
   #{mail_to @invitation.sessions.chapter.email, @invitation.sessions.chapter.email}.
