--- a/app/views/session_invitation_mailer/invite_student.html.haml
+++ b/app/views/session_invitation_mailer/invite_student.html.haml
@@ -15,6 +15,10 @@
                 %h3 Hi, #{@member.name}
                 %p.lead
                   If you will be attending the workshop please RSVP as we need to know who is coming to make sure we have enough coaches and food around.
+
+                - unless @session.invite_note.blank?
+                  %p
+                    = @session.invite_note.html_safe
                 %p
                   In our workshops, you can work through any of our #{link_to "tutorials", "http://codebar.github.io/tutorials" } or get help and guidance on other technologies or your personal projects. We believe that everyone should be entitled to free learning and our community has #{ link_to "a lot of devoted developers", full_url_for(coaches_url)} who help out weekly by coaching.
                 %p You will also get the opportunity to meet other people interested in coding and collaborate with them.
