--- a/app/views/dashboard/sponsoring.html.haml
+++ b/app/views/dashboard/sponsoring.html.haml
@@ -3,12 +3,60 @@
   .row
     .large-12.columns
       %p
-        Codebar has now been running for over 6 months and it has gone from strength to strength. There are over 300 students signed up and more than 70 developers offering their time for free on a regular basis. We started by running workshops in London and have recently expanded to Brighton with the help of #{link_to "Rosa Fox", "http://twitter.com/rosaemerald"} and #{link_to "Tom Ashworth", "http://twitter.com/phuunet"}. Soon we will be running workshops in Edinburgh and Glasgow.
+        Codebar is a not-for-profit organisation that has been running weekly coding workshops since October 2013, with London as its first chapter. Since then we have expanded to running workshops in Brighton and Cambridge and now have a community consisting of over 1000 members in our London chapter, 250 in Brighton and 100 in Cambridge.
       %p
-        We need money to keep Codebar free and be able to reach out to more places. If you would like to partner up with us and offer long-term support or just to make a substantial donation, #{mail_to "despo@codebar.io", "send me an email"}.
+        We have coached over 500 students, with new people attending our events every week and a waiting list of 30-50 students at our London events! This has grown our developer base rapidly in a short period but it has also substantially increased demand for space, coaches and resources. This in turn requires a substantial expansion in sponsorship investment so that we can not just run workshops across London smoothly, but also be able to provide help and support to our other chapters.
 
       %p
-        Other ways to help include: providing space, or getting food for one of our events. Have a look at our #{link_to "events calendar", "http://calendar.codebar.io"} and send me an email to book a date.
+        Workshops are currently held weekly in London and Brighton, and every forthright in Cambridge. We are also trying to take Codebar to more cities, in and out of the UK. If you are a sponsor interested in helping get Codebar started in your city, we'd be delighted to talk to you about hosting and sponsoring regular events.
+
 
       %p
-        Despo Pentara, Founder
+        In addition to our weekly workshops, we also hold one-day courses for existing and new students on more specialised topics and day-long coding events.
+
+      %p
+        All of Codebar’s events are run on a volunteer basis, with every subject expert and coach giving their time for free.
+
+      %p
+        Despite the fact that our events are run on this basis, there are of course still costs associated with both the general running of Codebar as well as our specific events.
+
+      %h3
+        Why should you sponsor?
+
+      %p
+        As a sponsor of any of Codebar’s events, you will be part of the vibrant community facilitating the growth of a diverse community. We have a strict yet simple code of conduct that includes more detailed information.
+
+      %p
+        You will be helping to promote diversity within the tech sector and be part of an exciting community committed to narrowing the skills gap. Not only that, but you will also be contributing to the growth of much-needed technical skills giving a further boost to the post-recession economy.
+
+      %p
+        Your sponsorship will enable more women, LGBTQ and other people from under-represented minority groups to get started in development, or raise their skills to the next level. You will also have contact with developers of all levels at our workshops. Many of Codebar’s students have found jobs as a direct result of the time they have invested to learn and develop their coding skills with us.
+
+      %p
+        Whatever investment you choose, your logo will appear on the Codebar website along with a link to your site. You are also welcome to give a 5 minutes at the beginning of an evening workshop you host in a topic that you think that our students will find interesting and informative.
+
+      %h3
+        How can you sponsor?
+
+      %p
+        There are different ways that you can help and support our vibrant and growing community. You can be a regular workshop supporter and offer your venue and food to a substantial amount of workshops taking place in your area or be a workshop supporter and help by taking care of one of our workshops every now and then.
+
+      %p
+        We also welcome monetary sponsorship to help us cover other expenses.
+
+      %h3
+        What do you get in return?
+
+      %p
+        Whatever your investment, you can be proud knowing you are an active member of this flourishing sector, enabling people to find jobs, enhance their existing careers and substantially improve the quality of life of those people who are often discriminated against.
+
+      %p
+        Depending on your level of sponsorship we will also list your logo and link on our website, thank you on twitter, mention you in our monthly newsletter and you will be welcome to distribute your marketing collateral in our events.
+
+      %p
+        We look forward to welcoming you to our evolving community!
+
+      %p
+        %b
+          Despo Pentara, Founder
+
