--- a/app/views/course/invitation/show.html.haml
+++ b/app/views/course/invitation/show.html.haml
@@ -6,6 +6,10 @@
       %dl.sub-nav
         %dd{ "data-magellan-arrival" => "tutors" }
           =link_to "Tutors", "#tutors"
+        %dd{ "data-magellan-arrival" => "location" }
+          =link_to "Host & Sponsors", "#location"
+        %dd{ "data-magellan-arrival" => "organisers" }
+          =link_to "Organisers", "#organisers"
 
   .row
     .large-8.columns
@@ -13,38 +17,27 @@
         Hi #{@invitation.member.name},
 
       %p
-        We would like to invite you to our upcoming #{@invitation.course.to_s} course.
-      %p
-        As this course has limited space it is entirely limited to women, LGBTQ and people otherwise underrepresented.
+        If you are new to Codebar, make sure you read our #{link_to("code of conduct", code_of_conduct_path)} and #{link_to("attendance policy", attendance_policy_path)} before getting your ticket.
 
+      %p
+        We always make an effort to have vegetarian, vegan and gluten-free food options available. If you have any other dietary requirements #{mail_to @course.chapter.email, "send us an email"}.
       %hr
-      %h5= @invitation.course.short_description
-      %p= @invitation.course.description.html_safe
+      %h5
+        = @course.short_description
+      %p
+        = @course.description.html_safe
 
       - if @invitation.course.url.present?
         %p
           =link_to "Read more about the course", @invitation.course.url, class: 'button tiny round'
     .large-4.columns
       .panel
-        - if @invitation.course.date_and_time < DateTime.now
+        - if @course.date_and_time < DateTime.now
           %em This session has already taken place!
         - else
           = link_to "Get your ticket", @invitation.course.ticket_url, class: "expand button round center"
       - if !@next_session.nil? or !@meeting.nil?
         %hr
-        .panel
-          %h4 Upcoming events
-          %dl
-            - if @next_session.present?
-              =link_to invitation_path do
-                %dt
-                  Coding Workshop
-                %dd= humanize_date_with_time(@next_session.date_and_time, @next_session.time)
-            - if @meeting
-              =link_to @meeting do
-                %dt= @meeting.title
-                %dd= humanize_date_with_time(@meeting.date_and_time)
-
 
   .row
     .large-12.columns
@@ -53,7 +46,7 @@
   .row
     .large-12.columns
       %ul.small-block-grid-1.medium-block-grid-2.large-block-grid-2
-        - @invitation.course.tutors.each do |tutor|
+        - @course.tutors.each do |tutor|
           %li.coach
             .row
               .small-2.columns
@@ -65,21 +58,47 @@
                 %p= tutor.about_you.html_safe
 
   .row
+    %hr
     .large-12.columns
       %a{ name: "location" }
-      %h4{ "data-magellan-destination" => "location"} Location
+      %h4{ "data-magellan-destination" => "location"} Host & Sponsors
   .row
-    .medium-9.columns
+    .medium-8.columns
+      %p
+        %strong= @course.venue.name
+        %br
+          = @host_address.to_html
+        %br
       %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
       =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-    .medium-3.columns
-      = image_tag @invitation.course.sponsor.avatar, class: 'sponsor-logo'
-      %p
-        = @host_address.to_html
-      %p
-        %h5 Organisers
-        - @invitation.course.chapter.organisers.each do |organiser|
-          = organiser.full_name
-          = organiser.mobile
-
+    .large-4.columns
+      %ul.no-bullet
+        %li
+          .row
+            .large-4.columns
+              = image_tag @course.venue.avatar, class: 'sponsor'
+            .large-8.columns
+              =link_to @course.venue.name, @course.venue.website
+              %p
+                = @course.venue.description
+        %br
   %br
+  .row
+    .large-12.columns
+      %hr
+      %a{ name: "organisers" }
+      %h4{ "data-magellan-destination" => "organisers"}= t('events.organisers')
+  .row
+    .large-12.columns
+      %br
+      %ul.small-block-grid-2.medium-block-grid-4
+        - @course.organisers.each do |organiser|
+          %li.text-center
+            =link_to twitter_url_for(organiser.twitter) do
+              =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
+            %br
+            %br
+            = organiser.full_name
+            %br= organiser.mobile
+            %br
+
