--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -12,7 +12,7 @@
     .large-5.medium-5.small-5.columns
       .title
         =link_to event.to_s, event.path
-      %small= event.description
+      %small= event.short_description
       - if event.venue.present?
         %br
         = t("events.kindly_hosted_by")
