update attend student button to have better description

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -13,7 +13,7 @@
           Sign up
       - else
         =link_to event_student_rsvp_path(@event), class: 'button round' do
-          = t('events.os_get_started')
+          = t('events.attend_as_student')
         =link_to event_coach_rsvp_path(@event), class: 'button round' do
           = t('events.attend_as_coach')
         %br
