--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -78,6 +78,22 @@
           %br
           %small you must specify a host before sending out invitations
 
+  .row
+    .large-12.columns
+      %hr
+      %h4
+        Manage RSVPs
+        %small
+          (
+          %span{ "data-tooltip" => true, "aria-haspopup" => "true", class: "has-tip", title: t('admin.workshop.manage_rsvps.text') }?
+          )
+    = simple_form_for :workshop, :url => admin_workshop_invitations_path(@workshop), method: :put do |f|
+      .medium-6.columns
+        = f.select :invitations, @workshop.invitations.not_accepted.all.map { |u| [ "#{u.member.full_name} (#{u.role})", u.id] }, { include_blank: true }, { class: 'chosen-select', required: true }
+        .text-right
+          %br
+          = f.submit :RSVP, class: 'button round tiny'
+
   - if @workshop.invitations.any?
     .row
       %hr
