list all the chapters

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -4,7 +4,7 @@
     .medium-12.columns
       %p.lead.text-center
         = raw t("dashboard.join_workshops_in")
-        #{link_to "London", chapter_url("london")}, #{link_to "Brighton", chapter_url("brighton")}, #{link_to "Cambridge", chapter_url("cambridge")} and soon #{link_to "Florianopolis", chapter_url("florianopolis")}
+        #{link_to "London", chapter_url("london")}, #{link_to "South London", chapter_url("south-london")}, #{link_to "Brighton", chapter_url("brighton")}, #{link_to "Birmingham", chapter_url("birmingham")}, #{link_to "Cambridge", chapter_url("cambridge")} and soon #{link_to "Florianopolis", chapter_url("florianopolis")}
         = t("dashboard.workshops_goal")
   %br
   .row
