add member dashboard and announcements

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require foundation_and_overrides
  *= require font-awesome
  *= require main
+ *= require event
  *= require star-rating
  *= require pickadate/default
  *= require pickadate/default.date
