--- a/app/views/dashboard/dashboard.html.haml
+++ b/app/views/dashboard/dashboard.html.haml
@@ -31,7 +31,8 @@
               %li= dot_markdown(announcement.message)
       %section#chapter
         .large-12.columns.events
-          %h3
+          - if @ordered_events.none?
+            There are no upcoming events announced for the chapters you are subscribed to.
           - @ordered_events.each do |date, workshops|
             .row
               .medium-12.columns
