update admin workshop management

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,6 +3,8 @@
 @import 'partials/social_media';
 @import 'partials/chapter';
 @import 'partials/member_note';
+@import 'partials/attendances';
+@import 'partials/admin_workshop';
 
 section.title {
   background-image: image-url('bg.jpg');
