--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -1,29 +1,31 @@
-- invitations.each do |invitation|
-  %ul.no-bullet
-    %li
-      .row
-        .small-8.medium-8.columns
-          =link_to admin_member_path(invitation.member) do
-            - if invitation.member.full_name.blank?
-              = invitation.member.email
+.row
+  %table#attendances.large-12.columns
+    %tbody
+      - invitations.each do |invitation|
+        %tr.row.attendee
+          %td.small-1.columns
+            - if (invitation.parent.date_and_time - 30.minutes).past?
+              - if invitation.attended.nil?
+                =link_to admin_workshop_invitation_path(@workshop, invitation, attended: true), class: 'verify_attendance', title: "Verify attendance", method: :put, remote: true do
+                  %i.fa.fa-square-o
+              - else
+                %i.fa.fa-check-square-o
             - else
-              = invitation.member.full_name
-          - if invitation.member.newbie?
-            %p
-              %em New attendee!
-          %p
+              =link_to admin_workshop_invitation_path(@workshop, invitation, attending: false), class: 'cancel_attendance', title: "Cancel RSVP", method: :put, remote: true do
+                %i.fa.fa-minus-square-o
+          %td.small-5.columns
+            - if invitation.member.newbie?
+              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "New attendee." }
+                %i.fa.fa-paw
+            =link_to admin_member_path(invitation.member) do
+              - if invitation.member.full_name.blank?
+                = invitation.member.email
+              - else
+                = invitation.member.full_name
+          %td.small-6.columns
             %small=invitation.note
-          - if invitation.reminded_at.present?
-            %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "Email reminder." }
-              %small
-                %i.fa.fa-clock-o
-                =l(invitation.reminded_at)
-        - if invitation.attended.nil?
-          .medium-4.small-12.columns
-            =link_to "Attended", admin_invitation_attended_path(invitation, attended: true), class: "button round expand tiny sucess"
-            =link_to "Not attending", admin_invitation_not_attending_path(invitation), class: "button round expand tiny alert", method: :post
-        - else
-          .medium-3.columns
-            %i.fa.fa-check-circle.fa-2x.right
-
-      %hr
+            - if invitation.reminded_at.present?
+              %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "Email reminder." }
+                %small
+                  %i.fa.fa-clock-o
+                  =l(invitation.reminded_at)
