--- a/app/views/admin/workshop/_waiting_list.html.haml
+++ b/app/views/admin/workshop/_waiting_list.html.haml
@@ -2,22 +2,24 @@
   .row
     .large-12.columns
       %strong Waiting List
-      %ul.side-nav
-        - waiting_list.list.each do |waiting|
-          - invitation = waiting.invitation
-          %li
-            =link_to admin_member_path(invitation.member) do
-              =invitation.member.full_name
-              = l(waiting.created_at, format: :log)
-- if waiting_list.reminders.any?
   .row
-    .large-12.columns
-      %strong Reminders
-      %ul.side-nav
-        - waiting_list.reminders.each do |reminder|
-          - invitation = reminder.invitation
-          %li
-            =link_to admin_member_path(invitation.member) do
-              =invitation.member.full_name
-              = l(reminder.created_at, format: :log)
-
+    %table#attendances.large-12.columns
+      %tbody
+        - waiting_list.list.each do |list|
+          - invitation = list.invitation
+          %tr.row
+            %td.small-1.columns
+              =link_to admin_workshop_invitation_path(@workshop, invitation, attending: true), class: 'waiting_list', method: :put, remote: true, title: "Add to attendees" do
+                %i.fa.fa-plus-square-o
+            %td.small-5.columns
+              - if MemberPresenter.new(invitation.member).newbie?
+                %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: "New attendee." }
+                  %i.fa.fa-paw
+              =link_to admin_member_path(invitation.member) do
+                - if invitation.member.full_name.blank?
+                  = invitation.member.email
+                - else
+                  = invitation.member.full_name
+            %td.small-6.columns
+              %p
+                %small=invitation.note
