--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for [:admin, @workshop], url: :admin_workshop, method: :put do |f|
   .row
     .large-3.columns
-      = f.association :chapter, as: :select
+      = f.association :chapter, as: :select, collection: Chapter.available_to_user(current_user)
   .row
     .large-3.columns
       = f.input :date_and_time, as: :string, required: true, label: "Date", input_html: { data: { value: @workshop.date_and_time } }
